@@ -36,14 +36,15 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <!-- tag::jetty-version[] -->
-    <jetty-version>10.0.0-SNAPSHOT</jetty-version>
+    <jetty-version>9.4.15.v20190215</jetty-version>
     <!-- end::jetty-version[] -->
-    <slf4j-version>1.7.25</slf4j-version>
-    <log4j2-version>2.11.1</log4j2-version>
-    <spring-version>5.1.3.RELEASE</spring-version>
-    <spring-boot-version>2.0.6.RELEASE</spring-boot-version>
+    <slf4j-version>1.7.26</slf4j-version>
+    <log4j2-version>2.11.2</log4j2-version>
+    <spring-version>5.1.5.RELEASE</spring-version>
+    <spring-boot-version>2.1.3.RELEASE</spring-boot-version>
     <jackson-version>2.9.8</jackson-version>
-    <dojo-version>1.14.2</dojo-version>
+    <dojo-version>1.15.0</dojo-version>
+    <okhttp-version>3.13.1</okhttp-version>
   </properties>
 
   <url>https://cometd.org</url>
@@ -131,6 +132,30 @@
 
   <profiles>
     <profile>
+      <id>jdk9</id>
+      <activation>
+        <jdk>[9,)</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <release>8</release>
+            </configuration>
+          </plugin>
+          <plugin>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <configuration>
+              <additionalOptions>
+                <additionalOption>-html5</additionalOption>
+              </additionalOptions>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>release</id>
       <build>
         <plugins>
@@ -166,10 +191,10 @@
             <configuration>
               <rules>
                 <requireJavaVersion>
-                  <version>[11,)</version>
+                  <version>[8,)</version>
                 </requireJavaVersion>
                 <requireMavenVersion>
-                  <version>[3.6,)</version>
+                  <version>[3.5,)</version>
                 </requireMavenVersion>
               </rules>
             </configuration>
@@ -179,8 +204,8 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>11</source>
-          <target>11</target>
+          <source>8</source>
+          <target>8</target>
           <showDeprecation>true</showDeprecation>
           <showWarnings>true</showWarnings>
           <compilerArgument>-Xlint:all,-serial,-unchecked</compilerArgument>
@@ -323,7 +348,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-assembly-plugin</artifactId>
-          <version>3.1.0</version>
+          <version>3.1.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -369,11 +394,6 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>3.0.1</version>
-          <configuration>
-            <additionalOptions>
-              <additionalOption>-html5</additionalOption>
-            </additionalOptions>
-          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -388,7 +408,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-scm-plugin</artifactId>
-          <version>1.9.5</version>
+          <version>1.11.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -408,9 +428,9 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.0.0-M2</version>
+          <version>3.0.0-M3</version>
           <configuration>
-            <argLine>@{argLine} -showversion -Xmx1g -Xms1g -Xlog:gc*</argLine>
+            <argLine>@{argLine} -showversion -Xmx1g -Xms1g -XX:+PrintGCDetails -XX:+PrintCommandLineFlags -XX:MaxGCPauseMillis=1000</argLine>
           </configuration>
         </plugin>
         <plugin>
@@ -446,7 +466,7 @@
         <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
-          <version>0.8.2</version>
+          <version>0.8.3</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -494,7 +514,7 @@
       <dependency>
         <groupId>com.google.javascript</groupId>
         <artifactId>closure-compiler</artifactId>
-        <version>v20181210</version>
+        <version>v20190121</version>
       </dependency>
 
       <dependency>
